# autodiscover-rs

./: Cargo.toml  LICENSE  README.md
examples/: broadcast.rs  multicast.rs
src/: lib.rs
