[package]
name = "autodiscover-rs"
version = "0.1.0"
authors = ["Your Name <over.codes@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.3.12"
log = "0.4"
env_logger = "0.7.1"

[build-dependencies]