[package]
name = "autodiscover-rs"
version = "0.1.0"
authors = ["Your Name <over.codes@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "autodiscover-rs implements a simple algorithm to detect peers on an IP network, connects to them, and calls back with the connected stream. The algorthm supports both UDP broadcast and multicasting."
homepage = "https://github.com/over-codes/autodiscover-rs"
repository = "https://github.com/over-codes/autodiscover-rs"
readme = "README.md"
keywords = ["networking", "linux", "broadcast", "multicast"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.3.12"
log = "0.4"

[dev-dependencies]
env_logger = "0.7.1"